--- a/style.css
+++ b/style.css
@@ -3,23 +3,24 @@
     padding: 0;
 }
 
-.cabecalho {
+.cabeçalho {
     background-color: #000000;
     color: black;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 24px 0;
+    padding: 10px 0;
 }
 
-.cabecalho-imagem{
+.cabeçalho-imagem{
     width: 20%;
 }
 
-.cabecalho-lista-item{
+.cabeçalho-lista-item{
     display: inline-block;
     margin: 0 16px;
     font-size: 24px;
+    color: white;
 }
 
 .escola {
