--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 .cabeçalho-imagem{
@@ -25,11 +25,12 @@
 
 .escola {
     height: 400px;
-    background-image: linear-gradient(180deg, black, white);
+    background-image: linear-gradient(180deg, #000000, #006D82);
 }
 
 .futebolimg{
-    width: 200px;
+    width: 150px;
+    margin-right: 60%;
 }
 
 .escolatitulo{
@@ -42,4 +43,5 @@
 .escolatexto_um{
     color: white;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
